syntax = "proto3";

package ethereum.eth.v1alpha1;

import "google/protobuf/descriptor.proto";
import "proto/prysm/v1alpha1/beacon_block.proto";
import "proto/prysm/v1alpha1/beacon_state.proto";
import "proto/eth/ext/options.proto";

option csharp_namespace = "Ethereum.Eth.V1alpha1";
option go_package = "github.com/prysmaticlabs/prysm/v5/proto/prysm/v1alpha1;eth";
option java_multiple_files = true;
option java_outer_classname = "PowchainProto";
option java_package = "org.ethereum.eth.v1alpha1";
option php_namespace = "Ethereum\\Eth\\v1alpha1";

// ETH1ChainData is a container which holds all the relevant eth1
// information
message ETH1ChainData {
    LatestETH1Data current_eth1_data = 1 ;
    BeaconState beacon_state = 2;
}

// LatestETH1Data contains the current state of the eth1 chain.
message LatestETH1Data {
    uint64 block_height = 2;
    uint64 block_time = 3;
    bytes block_hash = 4;
    uint64 last_requested_block = 5;
}

// SparseMerkleTrie is used to describe the model of our deposit trie.
message SparseMerkleTrie {
    uint64 depth = 1;
    repeated TrieLayer layers = 2;
    repeated bytes original_items = 3;
}

// TrieLayer is used to represent each layer in the deposit tree due to
// the lack of protobuf support for multi-dimensional arrays.(Ex: 3d,4d,...)
message TrieLayer {
    repeated bytes layer = 1;
}